--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   </head>
 
   <body>
-    <div id="root">
+    <!-- <div id="root">
+    </div> -->
+    <img class="logo_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Game_of_Thrones_2011_logo.svg/2560px-Game_of_Thrones_2011_logo.svg.png">
+    <div id="searchbar-wraper">
+      <form>
+        <input id="search" type="search" pattern=".*\S.*" required>
+        <img src="https://www.iconpacks.net/icons/2/free-search-icon-2903-thumb.png" id="input_img">
+      </form>
+      <label for="search" id="count-episodes"></label>
     </div>
     <div id="main-div"></div>  
   
