updates for counter episodes + font

--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>TV Show Project | My Name OlhaDanylevska</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&family=Roboto:wght@300&display=swap');
+    </style>
+
   </head>
 
   <body>
     <!-- <div id="root">
     </div> -->
-    <img class="logo_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Game_of_Thrones_2011_logo.svg/2560px-Game_of_Thrones_2011_logo.svg.png">
+    <img class="logo_image" src="tv-shows-montage (1).jpg">
     <section>
-      <input id="search" type="search" pattern=".*\S.*" required>
+      <input id="search" type="search">
       <img src="https://www.iconpacks.net/icons/2/free-search-icon-2903-thumb.png" id="input_img">
     </section>
-    <div id="searchbar-wraper">
-      <label for="select-tv-show">Select TV Show</label>
+    <div id="select-wraper">
       <select for="select-tv-show" id="select-tv-show"></select>
-      <label for="select-episodes">Select Episode</label>
       <select for="select-episodes" id="select-episodes"></select>
     </div>
     
