added "go back to all Episodes"

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <!-- <div id="root">
     </div> -->
     <img class="logo_image" src="tv-shows-montage (1).jpg">
-    <section>
+    <form class="section">
       <input id="search" type="search">
-      <img src="https://www.iconpacks.net/icons/2/free-search-icon-2903-thumb.png" id="input_img">
-    </section>
+     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/VisualEditor_-_Icon_-_Search-big_-_white.svg/1200px-VisualEditor_-_Icon_-_Search-big_-_white.svg.png" id="input_img">
+    </form>
     <div id="select-wraper">
       <select for="select-tv-show" id="select-tv-show"></select>
       <select for="select-episodes" id="select-episodes"></select>
