--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/VisualEditor_-_Icon_-_Search-big_-_white.svg/1200px-VisualEditor_-_Icon_-_Search-big_-_white.svg.png" id="input_img">
     </form>
     <div id="select-wraper">
-      <select for="select-tv-show" id="select-tv-show"></select>
+      <select for="select-tv-show" id="select-tv-show">Select TV Show</select>
       <select for="select-episodes" id="select-episodes"></select>
     </div>
     
